# events-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  example.env  pyproject.toml
migrations/models/: 0_20250902130237_init.py  0_20251030180355_init.py  1_20250902130400_add_message_url_to_found_profiles.py  2_20250101000000_add_events_models.py
src/bot/db/: config.py  engine.py
src/bot/db/models/: __init__.py  event.py  user.py
src/bot/db/repositories/: admin.py  event_notifications.py  event_participants.py  events.py  users.py
src/bot/handlers/: start.py
src/bot/handlers/admin/: broadcast.py  events.py  menu.py  user_management.py
src/bot/handlers/events/: __init__.py  events.py  reactions.py
src/bot/localization/: translator.py
src/bot/localization/locales/ru/: text.ftl
src/bot/main/: config.py  main.py
src/bot/misc/callback_data/: admin.py  user.py
src/bot/misc/enums/: __init__.py  event_reaction.py  event_status.py  locales.py  notification_type.py
src/bot/misc/filters/: is_admin.py  translated_text_filter.py
src/bot/misc/keyboards/: user.py
src/bot/misc/keyboards/admin/: broadcast.py  events.py  menu.py  users_management.py
src/bot/misc/middlewares/: translator.py
src/bot/misc/states/: user.py
src/bot/services/: admin_actions_service.py  admin_notification_service.py  calendar_sync_service.py  deeplink_service.py  google_calendar.py  google_sheets.py  notification_service.py
src/bot/utils/: throttle.py
src/bot/utils/functions/: admin_actions.py  dates.py  user.py  users_management.py
